--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
         <link rel="stylesheet" href="/assets/styles.css" />
     </head>
     <body>
-        <h1>LinkTree</h1>
+        <img src="" alt="" />
     </body>
 </html>
