Add my profile pic

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
         <link rel="stylesheet" href="/assets/styles.css" />
     </head>
     <body>
-        <img src="" alt="" />
+        <img src="https://github.com/Nigraum.png" alt="Profile pic" />
     </body>
 </html>
