Add h1, p and ul with lis

--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
         <link rel="stylesheet" href="/assets/styles.css" />
     </head>
     <body>
-        <img src="https://github.com/Nigraum.png" alt="Profile pic" />
+        <img src="https://github.com/Nigraum.png" alt="Profile photo" />
+        <h1>Yan Negrão</h1>
+        <p>@nigraum</p>
+
+        <ul>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
     </body>
 </html>
