Add github link

--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
             <li>
                 <a href="https://www.youtube.com/watch?v=wiikKDz9dMQ&t=1s" target="_blank" >Youtube</a>
             </li>
-            <li></li>
+            <li>
+                <a href="https://github.com/Nigraum">GitHub</a>
+            </li>
             <li></li>
         </ul>
     </body>
