--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
 
         <ul>
             <li>
-                <a href="https://www.youtube.com/watch?v=wiikKDz9dMQ&t=1s" target="_blank" >Youtube</a>
+                <a href="https://github.com/Nigraum">GitHub</a>
             </li>
             <li>
-                <a href="https://github.com/Nigraum">GitHub</a>
+             <a href="https://www.youtube.com/watch?v=wiikK│~
+    Dz9dMQ&t=1s" target="_blank" >Youtube</a>
             </li>
             <li></li>
         </ul>
