add linkedin link

--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
              <a href="https://www.youtube.com/watch?v=wiikK│~
     Dz9dMQ&t=1s" target="_blank" >Youtube</a>
             </li>
-            <li></li>
+            <li>
+                <a href="https://linkedin.com/yan.corintima">Linkedin</a>
+            </li>
         </ul>
     </body>
 </html>
