add target property to links

--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
 
         <ul>
             <li>
-                <a href="https://github.com/Nigraum">GitHub</a>
+                <a href="https://github.com/Nigraum" target="_blank">GitHub</a>
             </li>
             <li>
              <a href="https://www.youtube.com/watch?v=wiikK│~
     Dz9dMQ&t=1s" target="_blank" >Youtube</a>
             </li>
             <li>
-                <a href="https://linkedin.com/yan.corintima">Linkedin</a>
+                <a href="https://linkedin.com/yan.corintima" target="_blank">Linkedin</a>
             </li>
         </ul>
     </body>
