--- a/index.html
+++ b/index.html
@@ -16,11 +16,10 @@
                 <a href="https://github.com/Nigraum" target="_blank">GitHub</a>
             </li>
             <li>
-             <a href="https://www.youtube.com/watch?v=wiikK│~
-    Dz9dMQ&t=1s" target="_blank" >Youtube</a>
+             <a href="https://www.youtube.com/watch?v=wiikKDz9dMQ&t=1s" target="_blank" >Youtube</a>
             </li>
             <li>
-                <a href="https://linkedin.com/yan.corintima" target="_blank">Linkedin</a>
+                <a href="https://www.linkedin.com/in/yancorintima/" target="_blank">Linkedin</a>
             </li>
         </ul>
     </body>
