--- a/index.html
+++ b/index.html
@@ -22,5 +22,9 @@
                 <a href="https://www.linkedin.com/in/yancorintima/" target="_blank">Linkedin</a>
             </li>
         </ul>
+
+      <footer>
+          <p>Feito por Yan Negrão</p>
+      </footer>
     </body>
 </html>
