Formatting links text

--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
 
         <ul>
             <li>
-                <a href="https://github.com/Nigraum" target="_blank">GitHub</a>
+                <a href="https://github.com/Nigraum" target="_blank">🐱 Github</a>
             </li>
             <li>
-             <a href="https://www.youtube.com/watch?v=wiikKDz9dMQ&t=1s" target="_blank" >Youtube</a>
+             <a href="https://www.youtube.com/watch?v=wiikKDz9dMQ&t=1s" target="_blank" >🎬 Youtube</a>
             </li>
             <li>
-                <a href="https://www.linkedin.com/in/yancorintima/" target="_blank">Linkedin</a>
+                <a href="https://www.linkedin.com/in/yancorintima/" target="_blank">💻 Linkedin</a>
             </li>
         </ul>
 
