Adding a div for the content

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
         <link rel="stylesheet" href="/assets/styles.css" />
     </head>
     <body>
+
+    <div>
         <img src="https://github.com/Nigraum.png" alt="Profile photo" />
         <h1>Yan Negrão</h1>
         <p>@nigraum</p>
@@ -26,5 +28,7 @@
       <footer>
           <p>Feito por Yan Negrão</p>
       </footer>
+
+    </div>
     </body>
 </html>
