Making my index more readable

--- a/index.html
+++ b/index.html
@@ -9,19 +9,29 @@
     <body>
 
     <div>
-        <img src="https://github.com/Nigraum.png" alt="Profile photo" />
+        <img src="https://github.com/Nigraum.png"
+        alt="Profile photo" />
         <h1>Yan Negrão</h1>
         <p>@nigraum</p>
 
         <ul>
             <li>
-                <a href="https://github.com/Nigraum" target="_blank">🐱 Github</a>
+                <a href="https://github.com/Nigraum"
+                   target="_blank">
+                    🐱 Github
+                </a>
             </li>
             <li>
-             <a href="https://www.youtube.com/watch?v=wiikKDz9dMQ&t=1s" target="_blank" >🎬 Youtube</a>
+             <a href="https://www.youtube.com/watch?v=wiikKDz9dMQ&t=1s"
+                target="_blank">
+                 🎬 Youtube
+             </a>
             </li>
             <li>
-                <a href="https://www.linkedin.com/in/yancorintima/" target="_blank">💻 Linkedin</a>
+                <a href="https://www.linkedin.com/in/yancorintima/"
+                   target="_blank">
+                    💻 Linkedin
+                </a>
             </li>
         </ul>
 
