--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <body>
 
     <div>
-        <img src="https://github.com/Nigraum.png"
+        <img
+        src="https://github.com/Nigraum.png"
         alt="Profile photo" />
         <h1>Yan Negrão</h1>
         <p>@nigraum</p>
