Add a class to my div

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
 
-    <div>
+    <div class="container">
         <img
         src="https://github.com/Nigraum.png"
         alt="Profile photo" />
