Finishing css and website

--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
     <head>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>LinkTree</title>
         <link rel="stylesheet" href="/assets/styles.css" />
+        <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     </head>
     <body>
 
@@ -13,7 +16,7 @@
         src="https://github.com/Nigraum.png"
         alt="Profile photo" />
         <h1>Yan Negrão</h1>
-        <p>@nigraum</p>
+        <p class="username">@nigraum</p>
 
         <ul>
             <li>
